--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "author": "Yonathan Sandoval",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
         "express": "^4.16.4",
-        "mongoose": "^5.5.5"
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.5.5",
+        "mongoose-unique-validator": "^2.0.3"
     }
 }
